<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Gavkari</string>
    <string name="place_picker_api" translatable="false">AIzaSyA5YG--J0X0NRPCFNL_7aab-w6bTgn9_eY</string>
    <string name="lbl_next">NEXT</string>
    <string name="lbl_select_your_language">Select your language</string>
    <string name="lbl_english">English</string>
    <string name="lbl_marathi">Marathi ( मराठी )</string>
    <string name="lbl_sign_in_to_your_account">Sign in to your account</string>
    <string name="hint_Email">Email</string>
    <string name="hint_password">Password</string>
    <string name="lbl_sign_in">Sign In</string>
    <string name="lbl_forgot_password">Forgot Password ?</string>
    <string name="lbl_not_yet_registered">Not yet registered? </string>
    <string name="lbl_sign_up">SIGN UP</string>
    <string name="lbl_create_your_account">Create your account</string>
    <string name="hint_user">Name</string>
    <string name="hint_mobile">Number</string>
    <string name="hint_set_pwd">Set Password</string>
    <string name="lbl_already_registered">Already registered? </string>
    <string name="lbl_continue">CONTINUE</string>
    <string name="lbl_save_continue">SAVE AND CONTINUE</string>
    <string name="opendrawer">Open Drawer</string>
    <string name="closedrawer">Close drawer</string>
    <string name="lbl_notification">Notification</string>
    <string name="lbl_settings">Settings</string>
    <string name="lbl_help">Help</string>
    <string name="lbl_share">Share</string>
    <string name="lbl_my_account">My account</string>
    <string name="lbl_legal">Terms &amp; Conditions</string>
    <string name="lbl_remove">Remove</string>
    <string name="warning_empty_password">Please enter your password !</string>
    <string name="warning_invalid_password">Please enter valid 6 to 12 digit password !</string>
    <string name="warning_empty_name">Please enter your name !</string>
    <string name="warning_empty_mobile">Please enter your mobile number !</string>
    <string name="warning_invalid_mobile">Please enter valid mobile number !</string>
    <string name="warning_try_later">Please try again later !</string>
    <string name="warning_select_state">Please Select state !</string>
    <string name="warning_select_district">Please select district !</string>
    <string name="lbl_add">Add</string>
    <string name="warning_no_village_selected">Village is not selected</string>
    <string name="title_select_village">SELECT VILLAGE</string>
    <string name="title_event_details">Event Detail</string>
    <string name="title_create_ad">Create Event</string>
    <string name="title_make_payment">Make Payment</string>
    <string name="lbl_ad_title">Event Title</string>
    <string name="lbl_subtitle">Subtitle</string>
    <string name="lbl_family">Family</string>
    <string name="lbl_select_date">Select Date</string>
    <string name="lbl_select_time">Select Time</string>
    <string name="lbl_muhurt">Muhurt</string>
    <string name="lbl_muhurt_hint">e.g. Wedding will be happen at 12:30 pm</string>
    <string name="lbl_address">Address</string>
    <string name="warning_empty_ad_title">Please enter the event title</string>
    <string name="warning_empty_sub_title">Please enter the event subtitle</string>
    <string name="warning_empty_sub_title_person">Please enter the person name</string>
    <string name="warning_empty_family_info">Please enter the family information</string>
    <string name="warning_empty_date">Please select the date</string>
    <string name="warning_empty_time">Please select the time</string>
    <string name="warning_empty_muhurt">Please enter the muhurt</string>
    <string name="warning_empty_address">Please enter the address</string>
    <string name="warning_location_permission">Location permission is needed</string>
    <string name="title_need_permission">Need Permission</string>
    <string name="message_permission_location">Permission is important to select location from google map !</string>
    <string name="message_permission_call">Permission is important to make a call !</string>
    <string name="lbl_grant">GoTo Settings</string>
    <string name="lbl_cancel">Cancel</string>
    <string name="warning_valid_map_location">Please select valid map location</string>
    <string name="warning_empty_more_info">Please enter the more information</string>
    <string name="lbl_map_location">Map Location</string>
    <string name="lbl_more_information">More Information</string>
    <string name="hint_more_info">e.g. Invitation from Kasar and Dhavle Family etc...</string>
    <string name="lbl_upload_photos">Upload Photos ( Or you can upload later on )</string>
    <string name="lbl_contact_number">Contact Number</string>
    <string name="hint_contact_no">You can add multiple nos. seprated by commas</string>
    <string name="lbl_imp_note">IMP Note</string>
    <string name="hint_tips">e.g. No gifts etc...</string>
    <string name="warning_empty_cont_number">Please enter the contact number !</string>
    <string name="lbl_camera_pick_image">Camera</string>
    <string name="lbl_gallery_pick_image">Gallery</string>
    <string name="message_enable_permission">This app needs permission to use this feature. You can grant them in settings.</string>
    <string name="warning_upload_photo">Please upload photo of your family</string>
    <string name="lbl_view_all">View All</string>
    <string name="title_news_detail">News Detail</string>
    <string name="hint_search">Search</string>
    <string name="title_directory">Directory</string>
    <string name="title_notification">Notification</string>
    <string name="title_my_ad">My Event</string>
    <string name="title_setting">Settings</string>
    <string name="title_edit_ad">Edit Event</string>
    <string name="lbl_amount">"Total Payable Amount  :   \u20B9 "</string>
    <string name="lbl_user_id">User ID : UI0</string>
    <string name="lbl_ad_id">"Event ID : "</string>
    <string name="url_gavkari_app_play_store">https://play.google.com/store/apps/details?id=com.gavkariapp</string>
    <string name="lbl_event_status">Status -</string>
    <string name="lbl_published_date">Date -</string>
    <string name="lbl_ad_cost">Publication Cost -</string>
    <string name="lbl_edit">Edit</string>
    <string name="lbl_publish">PUBLISH</string>
    <string name="lbl_published">Published</string>
    <string name="lbl_in_review">Under Review</string>
    <string name="lbl_rejected">Rejected</string>
    <string name="lbl_not_published">Not Published</string>
    <string name="lbl_payment_pending">- Payment Pending</string>
    <string name="msg_connection_success">Village added successfully</string>
    <string name="msg_connection_deleted">Connection removed successfully</string>
    <string name="msg_no_data">Thanks for visit, \n data will be available soon..</string>
    <string name="msg_no_internet">Please, Check your internet connection..</string>
    <string name="msg_unexpected_error">Please try after some time..</string>
    <string name="msg_turnon_data">Please turn on mobile data or Wi-Fi..</string>
    <string name="msg_event_created">Event Saved successfully</string>
    <string name="msg_event_updated">Event Updated successfully</string>
    <string name="msg_calling">Try calling now !</string>
    <string name="lbl_save">Save</string>
    <string name="on">ON</string>
    <string name="off">OFF</string>
    <string name="change_notification_status">Change Notification Status</string>
    <string name="refund">Refund</string>
    <string name="log_out">Log out</string>
    <string name="msg_logout">Logout Successfully</string>
    <string name="hint_bio">Biodata</string>
    <string name="hint_enter_otp">Enter OTP</string>
    <string name="hint_my_village">Events</string>
    <string name="warning_otp">Please enter OTP first</string>
    <string name="warning_verify_mob_no">Please verify your mobile no</string>
    <string name="msg_profile_update">Your profile updated successfully</string>
    <string name="title_activity_refund">RefundActivity</string>
    <string name="account_holder_name">Account Holder Name</string>
    <string name="account_number">Account Number</string>
    <string name="ifsc_code">IFSC Code</string>
    <string name="branch_name">Branch Name</string>
    <string name="hint_submit">Submit</string>
    <string name="lbl_submit_amout">Submit your bank account information to get refund amount</string>
    <string name="msg_status_acct">Your need to update account info again</string>
    <string name="msg_acct_update">Your account info updated successfully</string>
    <string name="msg_enter_acct_no">Please enter account number</string>
    <string name="msg_show_ifsc_code">Please enter ifsc code</string>
    <string name="msg_enter_branch">Please enter branch name</string>
    <string name="lbl_refund_amt">Refund Amount :  </string>
    <string name="lbl_tran_id">Transaction Id : </string>
    <string name="msg_share_more_info">For more info download :</string>
    <string name="tittle_share_via">Share via</string>
    <string name="customer_mobile_no">Mobile</string>
    <string name="btn_send">Send</string>
    <string name="message">Message</string>
    <string name="title_sms">Send SMS</string>
    <string name="msg_delete_ad">Your event is deleted successfully.</string>
    <string name="msg_delete_alert">Do you want to delete the event ?</string>
    <string name="msg_yes">Yes</string>
    <string name="msg_no">No</string>
    <string name="msg_alert">Alert</string>
    <string name="msg_refund">Refund</string>
    <string name="title_history">History</string>
    <string name="title_account">Account</string>
    <string name="lbl_my_event">My Event</string>
    <string name="lbl_create_event">Create Event</string>
    <string name="kirana">Kirana</string>
    <string name="clinic">Clinic</string>
    <string name="tractor">Tractor</string>
    <string name="agri_store">Agri Store</string>
    <string name="flour_mill">Flour Mill</string>
    <string name="hotel">Hotel</string>
    <string name="wireman">Wireman</string>
    <string name="postman">Postman</string>
    <string name="travel">Travel</string>
    <string name="decoration">Decoration</string>
    <string name="construction">Construction</string>
    <string name="carpenter">Carpenter</string>
    <string name="painter">Painter</string>
    <string name="farm_worker">Farm worker</string>
    <string name="govt_office">Govt Office</string>
    <string name="other_business">Other Business</string>
    <string name="select_your_business_to_add_in_directory">Select your business to add in directory</string>
    <string name="lbl_apply">Apply</string>
    <string name="lbl_more_village">Other Villages</string>
    <string name="lbl_date">Date</string>
    <string name="lbl_distance">Distance</string>
    <string name="lbl_price_low_to_high">Price : Low to high</string>
    <string name="lbl_price_high_to_low">Price : High to low</string>
    <string name="lbl_select_machine_to_check_ads">Select machine to check ads</string>
    <string name="lbl_tractor">Tractor</string>
    <string name="lbl_pickup">Pickup</string>
    <string name="lbl_tempo_truck">Tempo Truck</string>
    <string name="lbl_car">Car</string>
    <string name="lbl_two_wheeler">Two wheeler</string>
    <string name="lbl_thresher">Thresher</string>
    <string name="lbl_kutti_mc">Kutti Machine</string>
    <string name="lbl_spray_blower">Spray Blower</string>
    <string name="lbl_other_machinery">Other Machinery</string>
    <string name="all_mc">All machinery</string>
    <string name="lbl_my_sale_ad">My Sale Ad</string>
    <string name="lbl_create_ad">Create Ad</string>
    <string name="lbl_check_equipment">Check Equipment</string>
    <string name="lbl_check_machinery">Check Machinery</string>
    <string name="lbl_check_animal">Check Animal</string>
</resources>