<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.CreateEventOneActivity">

    <include layout="@layout/layout_toolbar"></include>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimens_40"
        android:background="@color/isabelline"
        android:gravity="center"
        android:text="@string/select_your_business_to_add_in_directory"
        android:textSize="@dimen/text_14"
        android:textStyle="normal"></TextView>

    <ScrollView
        android:visibility="visible"
        android:id="@+id/scrMain"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="@dimen/dimens_8"
        android:padding="@dimen/dimens_4"
        android:scrollbars="none">

        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:orientation="vertical"
            android:padding="@dimen/dimens_12"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <TextView
                android:textStyle="bold"
                android:id="@+id/tvKirana"
                android:gravity="center"
                android:textColor="@color/colorPrimary"
                android:padding="@dimen/dimens_12"
                android:text="@string/kirana"
                android:background="@drawable/border_square_blue_thin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:textStyle="bold"
                android:id="@+id/tvClinic"
                android:layout_marginTop="@dimen/text_16"
                android:gravity="center"
                android:textColor="@color/colorPrimary"
                android:padding="@dimen/dimens_12"
                android:text="@string/clinic"
                android:background="@drawable/border_square_blue_thin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:textStyle="bold"
                android:id="@+id/tvTractor"
                android:layout_marginTop="@dimen/text_16"
                android:gravity="center"
                android:textColor="@color/colorPrimary"
                android:padding="@dimen/dimens_12"
                android:text="@string/tractor"
                android:background="@drawable/border_square_blue_thin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:textStyle="bold"
                android:id="@+id/tvAgriStore"
                android:layout_marginTop="@dimen/text_16"
                android:gravity="center"
                android:textColor="@color/colorPrimary"
                android:padding="@dimen/dimens_12"
                android:text="@string/agri_store"
                android:background="@drawable/border_square_blue_thin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:textStyle="bold"
                android:id="@+id/tvMill"
                android:layout_marginTop="@dimen/text_16"
                android:gravity="center"
                android:textColor="@color/colorPrimary"
                android:padding="@dimen/dimens_12"
                android:text="@string/flour_mill"
                android:background="@drawable/border_square_blue_thin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:textStyle="bold"
                android:id="@+id/tvHotel"
                android:layout_marginTop="@dimen/text_16"
                android:gravity="center"
                android:textColor="@color/colorPrimary"
                android:padding="@dimen/dimens_12"
                android:text="@string/hotel"
                android:background="@drawable/border_square_blue_thin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:textStyle="bold"
                android:id="@+id/tvWireman"
                android:layout_marginTop="@dimen/text_16"
                android:gravity="center"
                android:textColor="@color/colorPrimary"
                android:padding="@dimen/dimens_12"
                android:text="@string/wireman"
                android:background="@drawable/border_square_blue_thin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:textStyle="bold"
                android:id="@+id/tvPostman"
                android:layout_marginTop="@dimen/text_16"
                android:gravity="center"
                android:textColor="@color/colorPrimary"
                android:padding="@dimen/dimens_12"
                android:text="@string/postman"
                android:background="@drawable/border_square_blue_thin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:textStyle="bold"
                android:id="@+id/tvCarpenter"
                android:layout_marginTop="@dimen/text_16"
                android:gravity="center"
                android:textColor="@color/colorPrimary"
                android:padding="@dimen/dimens_12"
                android:text="@string/carpenter"
                android:background="@drawable/border_square_blue_thin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:textStyle="bold"
                android:id="@+id/tvPainter"
                android:layout_marginTop="@dimen/text_16"
                android:gravity="center"
                android:textColor="@color/colorPrimary"
                android:padding="@dimen/dimens_12"
                android:text="@string/painter"
                android:background="@drawable/border_square_blue_thin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:textStyle="bold"
                android:id="@+id/tvFarmWorker"
                android:layout_marginTop="@dimen/text_16"
                android:gravity="center"
                android:textColor="@color/colorPrimary"
                android:padding="@dimen/dimens_12"
                android:text="@string/farm_worker"
                android:background="@drawable/border_square_blue_thin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:textStyle="bold"
                android:id="@+id/tvGovtOffice"
                android:layout_marginTop="@dimen/text_16"
                android:gravity="center"
                android:textColor="@color/colorPrimary"
                android:padding="@dimen/dimens_12"
                android:text="@string/govt_office"
                android:background="@drawable/border_square_blue_thin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:textStyle="bold"
                android:id="@+id/tvTravel"
                android:layout_marginTop="@dimen/text_16"
                android:gravity="center"
                android:textColor="@color/colorPrimary"
                android:padding="@dimen/dimens_12"
                android:text="@string/travel"
                android:background="@drawable/border_square_blue_thin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:textStyle="bold"
                android:id="@+id/tvDecoration"
                android:layout_marginTop="@dimen/text_16"
                android:gravity="center"
                android:textColor="@color/colorPrimary"
                android:padding="@dimen/dimens_12"
                android:text="@string/decoration"
                android:background="@drawable/border_square_blue_thin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:textStyle="bold"
                android:id="@+id/tvConstruction"
                android:layout_marginTop="@dimen/text_16"
                android:gravity="center"
                android:textColor="@color/colorPrimary"
                android:padding="@dimen/dimens_12"
                android:text="@string/construction"
                android:background="@drawable/border_square_blue_thin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:textStyle="bold"
                android:id="@+id/tvOtherbusiness"
                android:layout_marginTop="@dimen/text_16"
                android:gravity="center"
                android:textColor="@color/colorPrimary"
                android:padding="@dimen/dimens_12"
                android:text="@string/other_business"
                android:background="@drawable/border_square_blue_thin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>

    </ScrollView>

</LinearLayout>