<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:minWidth="350dp"
    android:background="@drawable/border_square_white_hollow"
    android:layout_height="wrap_content">

    <TextView
        android:background="@color/isabelline"
        android:gravity="center"
        android:text="@string/lbl_select_machine_to_check_ads"
        android:layout_width="match_parent"
        android:layout_height="45dp" />

    <ScrollView
        android:visibility="visible"
        android:id="@+id/scrMain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dimens_8"
        android:padding="@dimen/dimens_4"
        android:scrollbars="none">

        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:orientation="vertical"
            android:padding="@dimen/dimens_12"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:textStyle="bold"
                android:id="@+id/tvAllMc"
                android:gravity="center"
                android:textColor="@color/colorPrimary"
                android:padding="@dimen/dimens_12"
                android:text="@string/all_mc"
                android:background="@drawable/border_square_blue_thin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_marginTop="@dimen/text_16"
                android:textStyle="bold"
                android:id="@+id/tvTractor"
                android:gravity="center"
                android:textColor="@color/colorPrimary"
                android:padding="@dimen/dimens_12"
                android:text="@string/lbl_tractor"
                android:background="@drawable/border_square_blue_thin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:textStyle="bold"
                android:id="@+id/tvPickup"
                android:layout_marginTop="@dimen/text_16"
                android:gravity="center"
                android:textColor="@color/colorPrimary"
                android:padding="@dimen/dimens_12"
                android:text="@string/lbl_pickup"
                android:background="@drawable/border_square_blue_thin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:textStyle="bold"
                android:id="@+id/tvTempoTruck"
                android:layout_marginTop="@dimen/text_16"
                android:gravity="center"
                android:textColor="@color/colorPrimary"
                android:padding="@dimen/dimens_12"
                android:text="@string/lbl_tempo_truck"
                android:background="@drawable/border_square_blue_thin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:textStyle="bold"
                android:id="@+id/tvCar"
                android:layout_marginTop="@dimen/text_16"
                android:gravity="center"
                android:textColor="@color/colorPrimary"
                android:padding="@dimen/dimens_12"
                android:text="@string/lbl_car"
                android:background="@drawable/border_square_blue_thin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:textStyle="bold"
                android:id="@+id/tvTwoWheeler"
                android:layout_marginTop="@dimen/text_16"
                android:gravity="center"
                android:textColor="@color/colorPrimary"
                android:padding="@dimen/dimens_12"
                android:text="@string/lbl_two_wheeler"
                android:background="@drawable/border_square_blue_thin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:textStyle="bold"
                android:id="@+id/tvThresher"
                android:layout_marginTop="@dimen/text_16"
                android:gravity="center"
                android:textColor="@color/colorPrimary"
                android:padding="@dimen/dimens_12"
                android:text="@string/lbl_thresher"
                android:background="@drawable/border_square_blue_thin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />



            <TextView
                android:textStyle="bold"
                android:id="@+id/tvKuttiMachine"
                android:layout_marginTop="@dimen/text_16"
                android:gravity="center"
                android:textColor="@color/colorPrimary"
                android:padding="@dimen/dimens_12"
                android:text="@string/lbl_kutti_mc"
                android:background="@drawable/border_square_blue_thin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:textStyle="bold"
                android:id="@+id/tvSprayBlower"
                android:layout_marginTop="@dimen/text_16"
                android:gravity="center"
                android:textColor="@color/colorPrimary"
                android:padding="@dimen/dimens_12"
                android:text="@string/lbl_spray_blower"
                android:background="@drawable/border_square_blue_thin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />


            <TextView
                android:id="@+id/tvOtherMc"
                android:textStyle="bold"
                android:layout_marginTop="@dimen/text_16"
                android:gravity="center"
                android:textColor="@color/colorPrimary"
                android:padding="@dimen/dimens_12"
                android:text="@string/lbl_other_machinery"
                android:background="@drawable/border_square_blue_thin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>

    </ScrollView>
</LinearLayout>